--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,4 +23,20 @@ table, caption, tbody, tfoot, thead, tr, th, td {
     font-family: 'Rubik', sans-serif;
     margin-left: auto;
     margin-right: auto;
+	
+	
 }
+
+/* .carousel-inner > .item >img{
+	min-height : 300px;
+	max-height : 300px;
+	width : 100%;
+  } */
+
+  .container{
+	height:100px;
+  }
+  .carousel-item {
+	  background-color: grey;
+  }
+
