--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,19 +24,18 @@ table, caption, tbody, tfoot, thead, tr, th, td {
     margin-left: auto;
     margin-right: auto;
 	
-	
 }
 
-/* .carousel-inner > .item >img{
-	min-height : 300px;
-	max-height : 300px;
-	width : 100%;
-  } */
+.carousel-item {
+	background-color: grey;
+}
 
-  .container{
-	height:100px;
-  }
-  .carousel-item {
-	  background-color: grey;
-  }
+.navbar { margin-bottom:0 !important; }
+
+#carouselExampleIndicators .carousel-item img {
+	object-fit: cover;
+	object-position: center;
+	height: 50vh;
+	overflow: hidden;
+}
 
