--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,21 +82,42 @@ body header, main{
 	border-right: none;
 	border-radius: 0;
 	color: white;
-	/* border-bottom: 5px red ; */
-	/* border-color: #446CB3; */
-}
-
-:active{
-
 }
 
 .form-control {
 	color: white;
-	
 }
 
 .d-flex .search-icon{
 	height: 20px;
 	width: 20px;
+}
 
+#carouselExampleIndicators li {
+	width: 10px;
+	height: 10px;
+	border-radius: 100%;
+}
+
+.search-icon{
+	margin-top: .45rem;
+}
+
+/* todo different color whilst clicked*/
+#navbarCollapse > form > input.form-control.me-2:focus{
+	box-shadow: none;
+	border-color: #CCDCF5 ;
+}
+
+#navbarCollapse > form > input.form-control.me-2::placeholder{
+	color: #8696AF  ;
+}
+
+#navbarCollapse > form > input.form-control.me-2::placeholder:focus{
+	color: #CCDCF5 ;
+}
+/* =========== */
+
+.card-title-wrapper{
+	
 }
