--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,11 +18,11 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 }
 
 
-*,body{
-   
-    font-family: 'Rubik', sans-serif;
-    margin-left: auto;
-    margin-right: auto;
+*, body {
+
+	font-family: 'Rubik', sans-serif;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 /* .carousel-item {
@@ -33,8 +33,8 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 	background-color: #2C5971;
 } */
 
-.navbar{
-    background-color: #14387F;
+.navbar {
+	background-color: #14387F;
 	width: 1500px;
 }
 
@@ -44,11 +44,11 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 	height: 50vh;
 	overflow: hidden;
 	margin: 0 auto;
-	width: 100%;     
+	width: 100%;
 	height: auto;
 }
 
-#carouselExampleIndicators{
+#carouselExampleIndicators {
 	margin-top: -24px;
 	width: 1500px;
 	/* float:none; */
@@ -56,14 +56,14 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 	margin-right: auto;
 }
 
-body header, main{
-	
+body header, main {
+
 	/* background-color: #c8d4dc; */
 	background-color: #e8edf0;
 
 }
 
-#navbarCollapse > form > button {
+#navbarCollapse>form>button {
 
 	color: #446CB3;
 }
@@ -74,9 +74,9 @@ body header, main{
 
 }
 
-#navbarCollapse > form > input {
+#navbarCollapse>form>input {
 
-    background-color: #14387F;
+	background-color: #14387F;
 	border-top: none;
 	border-left: none;
 	border-right: none;
@@ -88,7 +88,7 @@ body header, main{
 	color: white;
 }
 
-.d-flex .search-icon{
+.d-flex .search-icon {
 	height: 20px;
 	width: 20px;
 }
@@ -99,25 +99,30 @@ body header, main{
 	border-radius: 100%;
 }
 
-.search-icon{
+.search-icon {
 	margin-top: .45rem;
 }
 
 /* todo different color whilst clicked*/
-#navbarCollapse > form > input.form-control.me-2:focus{
+#navbarCollapse>form>input.form-control.me-2:focus {
 	box-shadow: none;
-	border-color: #CCDCF5 ;
+	border-color: #CCDCF5;
 }
 
-#navbarCollapse > form > input.form-control.me-2::placeholder{
-	color: #8696AF  ;
+#navbarCollapse>form>input.form-control.me-2::placeholder {
+	color: #8696AF;
 }
 
-#navbarCollapse > form > input.form-control.me-2::placeholder:focus{
-	color: #CCDCF5 ;
+#navbarCollapse>form>input.form-control.me-2::placeholder:focus {
+	color: #CCDCF5;
 }
+
 /* =========== */
 
-.card-title-wrapper{
-	
+.card-title-wrapper {}
+
+#fmi-logo {
+	object-fit: contain;
+	height: 50px; /* не знам дали така ще е най-добрия начин */
+	width: auto;
 }
