--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 
 .navbar {
 	background-color: #14387F;
-	width: 1600px;
+	width: 1500px;
 }
 
 #carouselExampleIndicators .carousel-item img {
@@ -77,6 +77,13 @@ header{
 	color: white;
 }
 
+.nav-link{
+	font-size: 1.3rem;
+}
+.nav-link:active{
+	color: white !important;
+}
+
 .form-control {
 	color: white;
 }
@@ -85,6 +92,11 @@ header{
 	height: 20px;
 	width: 20px;
 }
+
+#messages{
+	width: 50rem;
+}
+
 
 #carouselExampleIndicators li {
 	width: 10px;
@@ -111,8 +123,6 @@ header{
 }
 
 /* =========== */
-
-.card-title-wrapper {}
 
 #fmi-logo {
 	object-fit: contain;
